5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1808_2577.log
== TEST (2019-06-08 22:41:13) 
-- CODE:
frase = input("digite um frase:")
frase_2 = ""
for ch in range(len(frase)):
	if(frase[i] != "a" and frase[i] != "e" and frase[i] != "i" frase[i] != "o" and frase[i] != "u" frase[i] != " "):
		frase_2 = frase_2 + frase[i]
print(frase_2)
-- ERROR:
File "XXXX", line 4
    if(frase[i] != "a" and frase[i] != "e" and frase[i] != "i" frase[i] != "o" and frase[i] != "u" frase[i] != " "):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:41:35) 
-- CODE:
frase = input("digite um frase:")
frase_2 = ""
for ch in range(len(frase)):
	if(frase[i] != "a" and frase[i] != "e" and frase[i] != "i" frase[i] != "o" and frase[i] != "u" and frase[i] != " "):
		frase_2 = frase_2 + frase[i]
print(frase_2)
-- ERROR:
File "XXXX", line 4
    if(frase[i] != "a" and frase[i] != "e" and frase[i] != "i" frase[i] != "o" and frase[i] != "u" and frase[i] != " "):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:44:14) 
-- CODE:
frase = input("digite um frase:")
frase_2 = ""
for ch in range(len(frase)):
	if( (frase[i] != "a") and (frase[i] != "e") and (frase[i] != "i") and (frase[i] != "o") and (frase[i] != "u") and (frase[i] != " ")):
		frase_2 = frase_2 + frase[i]
print(frase_2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if( (frase[i] != "a") and (frase[i] != "e") and (frase[i] != "i") and (frase[i] != "o") and (frase[i] != "u") and (frase[i] != " ")):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:45:21) 
-- CODE:
frase = input("digite um frase:")
frase_2 = ""
for ch in range(len(frase)):
	if( (frase[ch] != "a") and (frase[ch] != "e") and (frase[ch] != "i") and (frase[ch] != "o") and (frase[ch] != "u") and (frase[ch] != " ")):
		frase_2 = frase_2 + frase[ch]
print(frase_2)
-- OUTPUT:
vc_pd_vr_q
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:46:00) 
-- CODE:
frase = input("digite um frase:")
frase_2 = ""
for ch in range(len(frase)):
	if( (frase[ch] != "a") and (frase[ch] != "e") and (frase[ch] != "i") and (frase[ch] != "o") and (frase[ch] != "u")):
		frase_2 = frase_2 + frase[ch]
print(frase_2)
-- OUTPUT:
vc_pd_vr_q
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 22:46:24) 
-- CODE:
frase = input("digite um frase:")
frase_2 = ""
for ch in range(len(frase)):
	if( (frase[ch] != "a") and (frase[ch] != "e") and (frase[ch] != "i") and (frase[ch] != "o") and (frase[ch] != "u")):
		frase_2 = frase_2 + frase[ch]
print(frase_2)
-- EXECUTION TIME:
0.86374
-- TEST CASE 1:
---- input:
voce_pode_vir_aqui
---- correct output:
vc_pd_vr_q
---- user output:
vc_pd_vr_q
-- TEST CASE 2:
---- input:
com
---- correct output:
cm
---- user output:
cm
-- TEST CASE 3:
---- input:
tudo
---- correct output:
td
---- user output:
td
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
